# sql

1/: sql.txt
2/: insert.txt  select1.txt  select2.txt
3/: CMakeLists.txt  main.cpp
4/sql04/: sql04.sln
4/sql04/sql04/: main.cpp  sql04.vcxproj
